# MCP-Experiment

./: .env-example  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt
experimentals/agent_provider/: agent_runner_llama_index.py  experiment_with_langchain.py  smol_agent.py
experimentals/mcp_servers/: MCP_Server.py  Tavily_server.py  agent_streamlit_langgraph.py  agent_streamlit_llamaindex.py  arXiv_Server.py
experimentals/mcp_servers/tools/: tavily_tool.py
experimentals/tool_hub/: MCP_with_tool_hub.py
